--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       
       - run:
           name: Install Ansible
-          command: sudo apt install ansible
+          command: sudo apt-add-repository ppa:ansible/ansible ; sudo apt update ; sudo apt install ansible
       
       - run:
           name: Install packer to build
