--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  Provision VM first:
+  provisioning-vm:
     machine: true
     working_directory: ~/workspace
     steps:
@@ -36,5 +36,5 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - validate
+      - provisioning-vm
       - packer-validate
