--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
 
       - run:
           name: Unzip Packer
-          command: unzip /opt/packer.zip
+          command: unzip /opt/packer.zip -d /opt
       - run:
           name: Listing packer
           command: ls /opt
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Listing packer 2
           command: ls ${pwd} 
-          
+
       - run: 
           name: give executeable access
           command: sudo chmod +x /opt/packer 
