--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
 
       - run:
           name: Unzip Packer
-          command: unzip /opt/packer.zip -d /opt
+          command: sudo unzip /opt/packer.zip -d /opt
       - run:
           name: Listing packer
           command: ls /opt
