--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,9 +54,9 @@ workflows:
   provisioning-test-build:
     jobs:
       - provisioning
-      - test
+      - test: 
           requires: 
             - provisioning
-      - build
+      - build: 
           requires:
             - test
