--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,10 @@ jobs:
 
       - run:
           name: docker login
-          command: docker login -u $DOCKER_USERNAME -p `echo $DOCKER_PASSWORD | base64 -d`
+          command: echo `echo $DOCKER_PASSWORD | base64 -d` | docker login -u $DOCKER_USERNAME --password-stdin
 
       - checkout
-      
+
       - run:
           name: validate python ansible
           command: /opt/packer validate ./python-alpine.json
